force-app/main/default/objects/ssot__PatientMedReconRecommendation__dlm/fields/ssot__MedicationReconciliationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationReconciliationId__c</fullName>
    <label>Medication Reconciliation</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationReconciliationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>