force-app/main/default/objects/ssot__PatientMedReconRecommendation__dlm/fields/ssot__NoteForPatientText__c.field-meta.xml
<CustomField>
    <fullName>ssot__NoteForPatientText__c</fullName>
    <label>Note For Patient</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NoteForPatientText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>