force-app/main/default/objects/ssot__PatientMedReconRecommendation__dlm/fields/ssot__NoteForProviderText__c.field-meta.xml
<CustomField>
    <fullName>ssot__NoteForProviderText__c</fullName>
    <label>Note For Provider</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NoteForProviderText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>