force-app/main/default/objects/ssot__PatientMedReconRecommendation__dlm/fields/ssot__RecommendationPriorityLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecommendationPriorityLevel__c</fullName>
    <label>Recommendation Priority Level</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecommendationPriorityLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>