force-app/main/default/objects/ssot__PatientMedReconRecommendation__dlm/fields/ssot__RecommendationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecommendationType__c</fullName>
    <label>Recommendation Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecommendationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>