force-app/main/default/objects/ssot__PatientMedReconRecommendation__dlm/fields/ssot__rel_1716721967205_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721967205_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedReconRecommendation_Medica_rel</label>
    <referenceTo>ssot__PatientMedicationReconciliation__dlm</referenceTo>
    <relationshipLabel>PatientMedReconRecommendation_Medica_rel</relationshipLabel>
    <relationshipName>rel_1716721967205_end</relationshipName>
    <type>Lookup</type>
</CustomField>